--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div class="half-width">
             <h2>Develop</h2>
             <h2>Without Limits</h2>
-            <p>I want to be a good web developer in 2022, working on that challenge.I want to be a good web developer in
-                2022, working on that challenge.
+            <p>Professional HTML templates. Responsive, fully customizable with easy Drag-n-Drop web editor. Adjust
+                colors, fonts, header and footer, layout and other design elements, as well as content and images.
             </p>
             <a class="link-button" target="_blank" href="https://mdbelaluddin.com/">Read The Documentation</a>
         </div>
@@ -68,8 +68,9 @@
             <h2>Know Our</h2>
             <h2>Global Community</h2>
 
-            <p>I want to be a good web developer in 2022, working on that challenge.I want to be a good web developer in
-                2022, working on that challenge.
+            <p>If you want to grow as a developer, I can't over-emphasize the benefits of joining a developer community.
+                There are many advantages, from peer-programming to sharing knowledge, mentorship, sharing support,
+                sharing tools, code reviews, answering questions, and much more.
             </p>
 
             <a class="link-button" target="_blank" href="https://mdbelaluddin.com/">Explore Now</a>
